# kcp-agent

./: .gitignore  LICENSE  README.md  knowledge.yaml  knowledge.yaml.sig  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  java-release.yml  release.yml  rust-release.yml
docs/: conformance.json  index.html
docs/css/: style.css
docs/js/: app.js
examples/: demo.js  demos.js
examples/demo-hub/: knowledge.yaml
examples/demo-hub/docs/: deploy.md  legacy.md  overview.md  prices.md  runbook.md
examples/fjordwire/: index.md  knowledge.yaml
examples/fjordwire/stories/: chipfab-exclusive.md  chipfab-rumour.md  datacenter-power.md  subsea-cable-feature.md  summary.md
examples/governed-skills/: README.md  knowledge.tampered.yaml  knowledge.yaml  knowledge.yaml.sig
examples/governed-skills/code-refactor/: SKILL.md
examples/governed-skills/compliance-sweep/: SKILL.md
examples/governed-skills/db-migration-signed/: SKILL.md
examples/governed-skills/db-migration-unsigned/: SKILL.md
examples/governed-skills/deploy/: SKILL.md
examples/governed-skills/docs-viewer/: SKILL.md
examples/governed-skills/no-scope-skill/: SKILL.md
examples/governed-skills/poisoned-playbook/: SKILL.md
examples/governed-skills/research-topic/: SKILL.md
examples/governed-skills/risk-assessment/: SKILL.md
examples/governed-skills/risk-assessment-2024/: SKILL.md
examples/governed-skills/ungranted-skill/: SKILL.md
examples/incident/: README.md
examples/incident/fjellcert/: knowledge.yaml  knowledge.yaml.sig
examples/incident/fjellcert/advisories/: fc-2026-017-rev2.md  fc-2026-017.md
examples/incident/nordlys/: knowledge.yaml
examples/incident/nordlys/docs/: broker-inventory.md  runbook.md
examples/incident/quaymaster/: knowledge.yaml
examples/incident/quaymaster/sales/: overview.md
examples/incident/ravnwatch/: knowledge.yaml
examples/milky-way/: README.md
examples/milky-way/brand/: knowledge.yaml
examples/milky-way/esg/: knowledge.yaml
examples/milky-way/hub/: knowledge.yaml  knowledge.yaml.sig
examples/milky-way/people/: knowledge.yaml
examples/milky-way/quality/: knowledge.yaml
examples/milky-way/recipes/: knowledge.yaml
examples/org/dev-mirror/: knowledge.yaml
examples/org/hub/: knowledge.yaml
examples/org/hub/docs/: welcome.md
examples/org/platform/: knowledge.yaml
examples/procedures/: knowledge.yaml
examples/procedures/runbooks/: restart-web-service.md  rotate-signing-keys.md
examples/sealed/: knowledge.yaml  knowledge.yaml.sig  ledger.md
examples/summer/: README.md
examples/summer/ferries/: knowledge.yaml
examples/summer/registry/: knowledge.yaml
examples/summer/safari/: knowledge.yaml
examples/summer/tourism/: knowledge.yaml  knowledge.yaml.sig
examples/vault/: knowledge.yaml
examples/vault/docs/: overview.md
examples/vault/memos/: board.md
examples/vault/press/: exclusive.md
guides/: build-a-conformant-implementation.md  cut-context-cost-with-dedup.md  give-your-agent-memory.md  make-your-repo-navigable.md  quickstart.md  sign-your-manifest.md  trace-your-decisions.md  wire-mcp-into-claude-code.md
java/: pom.xml
java/kcp-planner/: README.md  pom.xml
java/kcp-planner-spring-boot-starter/: README.md  pom.xml
rust/kcp-planner/: Cargo.toml  README.md
rust/kcp-planner-wasm/: Cargo.toml  README.md
rust/kcp-planner-wasm/src/: lib.rs
rust/kcp-planner/fixtures/diff/: credential-flip.json  money-budget-flip.json
rust/kcp-planner/fixtures/trace/: access-restricted-credentialed.json  access-restricted-gated.json  attestation-gated.json  attestation-presented.json  audience-role-excludes.json  budget-greedy-skip.json  context-budget-skip.json  federation-context-identity.json  scoring-relevance.json
rust/kcp-planner/src/: assess.rs  budget.rs  client.rs  diff.rs  fetch.rs  follow.rs  format.rs  json.rs  lib.rs  mcp.rs  model.rs  plan_io.rs  planner.rs  replay.rs  session.rs  synthesize.rs  trace.rs  validate.rs  vectors.rs  verify.rs
rust/kcp-planner/tests/: assess.rs  cli_artifact_conformance.rs  conformance.rs  diff_conformance.rs  fetch_conformance.rs  follow_conformance.rs  mcp_conformance.rs  replay_conformance.rs  skill_eligibility.rs  trace_conformance.rs  verify_conformance.rs
scripts/: build-site.mjs  build-wasm.mjs  gen-rust-fixtures.mjs  gen-vectors.mjs  seal-example.mjs  wasm-parity.mjs
site/: demos-entry.ts  entry.ts  node-stub.js
skills/kcp-navigator/: SKILL.md
src/: assess.ts  cli.ts  client.ts  diff.ts  discover.ts  fetch.ts  follow.ts  format.ts  ground.ts  groundloop.ts  index.ts  init.ts  loop.ts  mcp.ts  memory.ts  model.ts  plan-json.ts  planner.ts  provider.ts  replay.ts  replayground.ts  reuse.ts  serve.ts  serving.ts  session.ts  synthesize.ts  trace.ts  validate.ts  vectors.ts  verify.ts  watch.ts
test/: assess.test.ts  context.test.ts  demos.test.ts  diff.test.ts  discover.test.ts  docs.test.ts  economics.test.ts  fetch.test.ts  follow.test.ts  ground.test.ts  groundloop.test.ts  init.test.ts  invariants.test.ts  loop.test.ts  manifest.test.ts  mcp-sync.test.ts  mcp.test.ts  memory-redteam.test.ts  memory.test.ts  plan-json.test.ts  planner.test.ts  provider.test.ts  replay.test.ts  replayground.test.ts  reuse.test.ts  serve.test.ts  serving.test.ts  session.test.ts  site.test.ts  synthesize.test.ts  trace.test.ts  validate.test.ts  vectors.test.ts  verify.test.ts  watch.test.ts
vectors/: README.md  access-restricted-credentialed.json  access-restricted-gated.json  attestation-gated.json  attestation-presented.json  audience-role-excludes.json  budget-greedy-skip.json  context-budget-skip.json  federation-context-identity.json  not-for-negative-target.json  scoring-relevance.json  skill-eligibility-granted.json  skill-eligibility-strict-reject.json  temporal-supersession-overlap.json
(+159 files in other folders)
